# doc/studentlist/swagger.yaml
@@ -37,11 +37,12 @@ info:
   title: Gin Swagger Example API
   version: "1.0"
 paths:
-  /:
+  /student:
     get:
       consumes:
       - application/json
       description: get all students from the database.
+      operationId: get-all-Students
       produces:
       - application/json
       responses:
@@ -56,7 +57,6 @@ paths:
       summary: Show student list.
       tags:
       - Students
-  /student:
     post:
       consumes:
       - application/json
@@ -98,13 +98,20 @@ paths:
       consumes:
       - application/json
       description: get one student by id from the database.
+      operationId: get-Student-by-id
+      parameters:
+      - description: Student ID
+        in: path
+        name: id
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            type: struct
+            $ref: '#/definitions/models.Student'
         "404":
           description: Not Found
           schema:
